--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -1,278 +1,143 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Bot</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(45deg, #283048, #859398);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
+      // Move the piece
+      newGame[toRow][toCol] = randomMove.piece;
+      newGame[fromRow][fromCol] = '';
 
-    #root {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
-    }
-
-    .turn-info {
-      color: white;
-      font-size: 18px;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .button-container {
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .board-container {
-      display: flex;
-      justify-content: center;
-    }
-  </style>
-</head>
-<body>
-  <div id="root"></div>
-
-  <script type="text/babel" data-presets="react,stage-3">
-    const initialGameState = [
-      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-    ];
-
-    const pieceImages = {
-      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-    };
-
-    function Game() {
-      const [game, setGame] = React.useState(initialGameState);
-      const [selectedSquare, setSelectedSquare] = React.useState(null);
-      const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
-      const [gameOver, setGameOver] = React.useState(false);
-      const [inCheck, setInCheck] = React.useState(false);
-      const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
-
-      // Bot logic
-      React.useEffect(() => {
-        if (!isWhiteTurn && !gameOver) {
-          // Add a delay to simulate thinking time for the bot
-          setTimeout(() => {
-            const move = makeBotMove(game);
-            if (move) {
-              const { from, to } = move;
-              handleMove(from[0], from[1], to[0], to[1]);
-            }
-          }, 1000); // 1 second delay for the bot's move
-        }
-      }, [isWhiteTurn, gameOver]);
-
-      // Bot selects a random valid move for the black pieces
-      function makeBotMove(currentGame) {
-        const validMoves = [];
-        for (let row = 0; row < currentGame.length; row++) {
-          for (let col = 0; col < currentGame[row].length; col++) {
-            const piece = currentGame[row][col];
-            if (piece !== '' && piece === piece.toLowerCase()) { // Black pieces
-              for (let targetRow = 0; targetRow < currentGame.length; targetRow++) {
-                for (let targetCol = 0; targetCol < currentGame[targetRow].length; targetCol++) {
-                  if (isValidMove(piece, row, col, targetRow, targetCol, currentGame)) {
-                    validMoves.push({ from: [row, col], to: [targetRow, targetCol] });
-                  }
-                }
-              }
-            }
-          }
-        }
-
-        // Pick a random move from valid moves
-        if (validMoves.length > 0) {
-          return validMoves[Math.floor(Math.random() * validMoves.length)];
-        }
-        return null;
+      // Check for checkmate condition
+      const whiteKingPos = findKing(newGame, 'K');
+      if (isKingInCheck(newGame, whiteKingPos, true)) {
+        setGameOver(true);
+        alert('Game Over! Black wins by checkmating White.');
       }
 
-      // Function to handle moves (both player and bot)
-      function handleMove(startRow, startCol, targetRow, targetCol) {
-        const piece = game[startRow][startCol];
-        const newGame = game.map(row => row.slice());
-        newGame[targetRow][targetCol] = piece;
-        newGame[startRow][startCol] = '';
-        setGame(newGame);
-        setSelectedSquare(null);
-        setIsWhiteTurn(!isWhiteTurn);
-      }
+      setGame(newGame);
+      setIsWhiteTurn(true); // Switch back to white's turn
+      announceTurn("White"); // Announce white's turn
+    }
+  }
 
-      // Handle square click for human player's move
-      function handleClick(row, col) {
-        if (gameOver || !isWhiteTurn) return;
+  // Check if the piece belongs to the player
+  function isPlayerPiece(piece, isWhite) {
+    return (isWhite && piece === piece.toUpperCase()) || (!isWhite && piece === piece.toLowerCase());
+  }
 
-        const currentPlayer = isWhiteTurn ? 'White' : 'Black';
+  // Check if the piece is an opponent's piece
+  function isOpponentPiece(selectedPiece, targetPiece) {
+    return (selectedPiece === selectedPiece.toUpperCase() && targetPiece === targetPiece.toLowerCase()) ||
+           (selectedPiece === selectedPiece.toLowerCase() && targetPiece === targetPiece.toUpperCase());
+  }
 
-        if (selectedSquare) {
-          const [selectedRow, selectedCol] = selectedSquare;
-          const selectedPiece = game[selectedRow][selectedCol];
-          const targetPiece = game[row][col];
+  // Validate if the move is legal
+  function isValidMove(piece, fromRow, fromCol, toRow, toCol, newGame) {
+    // Add basic validation for different pieces (simplified for demonstration)
+    const targetPiece = newGame[toRow][toCol];
+    const direction = isUpperCase(piece) ? 1 : -1;
 
-          if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
-            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
-              if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, game)) {
-                handleMove(selectedRow, selectedCol, row, col);
-              } else {
-                setSelectedSquare(null);
-              }
-            } else {
-              setSelectedSquare(null);
-            }
-          } else {
-            setSelectedSquare(null);
-          }
-        } else {
-          if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
-            setSelectedSquare([row, col]);
+    if (piece.toLowerCase() === 'p') { // Pawn
+      const moveForward = (fromRow + direction === toRow && fromCol === toCol);
+      const moveCapture = (fromRow + direction === toRow && Math.abs(fromCol - toCol) === 1 && targetPiece !== '');
+      return moveForward || moveCapture;
+    }
+
+    // Add validation for other pieces (Rook, Knight, Bishop, Queen, King)
+    // For now, we'll just allow simple horizontal/vertical movement for rooks
+    if (piece.toLowerCase() === 'r') { // Rook
+      const sameRow = fromRow === toRow;
+      const sameCol = fromCol === toCol;
+      const pathClear = isPathClear(fromRow, fromCol, toRow, toCol, newGame);
+      return (sameRow || sameCol) && pathClear;
+    }
+
+    // For simplicity, assume other pieces cannot move for now
+    return false;
+  }
+
+  // Check if a given path is clear for rook movement
+  function isPathClear(fromRow, fromCol, toRow, toCol, newGame) {
+    const rowStep = fromRow === toRow ? 0 : (toRow > fromRow ? 1 : -1);
+    const colStep = fromCol === toCol ? 0 : (toCol > fromCol ? 1 : -1);
+
+    let currentRow = fromRow + rowStep;
+    let currentCol = fromCol + colStep;
+
+    while (currentRow !== toRow || currentCol !== toCol) {
+      if (newGame[currentRow][currentCol] !== '') return false;
+      currentRow += rowStep;
+      currentCol += colStep;
+    }
+    return true;
+  }
+
+  // Check if the king of the current player is in check
+  function isKingInCheck(game, kingPosition, isWhite) {
+    const kingPiece = isWhite ? 'K' : 'k';
+
+    // Check all opponent's pieces for attacking moves
+    for (let row = 0; row < game.length; row++) {
+      for (let col = 0; col < game[row].length; col++) {
+        const piece = game[row][col];
+        if (piece && isOpponentPiece(piece, kingPiece)) {
+          if (isValidMove(piece, row, col, kingPosition[0], kingPosition[1], game)) {
+            return true;
           }
         }
       }
-
-      function isPlayerPiece(piece, isWhiteTurn) {
-        return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
-      }
-
-      function isOpponentPiece(piece, target) {
-        return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
-               (piece.toLowerCase() === piece && target.toUpperCase() === target);
-      }
-
-      function isValidMove(piece, startRow, startCol, targetRow, targetCol, newGame) {
-        const rowDiff = targetRow - startRow;
-        const colDiff = targetCol - startCol;
-
-        switch (piece.toLowerCase()) {
-          case 'p':
-            const direction = isWhiteTurn ? -1 : 1;
-            const startRowForPawn = isWhiteTurn ? 6 : 1;
-            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') {
-              return true;
-            }
-            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '' && newGame[startRow + direction][startCol] === '') {
-              return true;
-            }
-            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '' && isOpponentPiece(piece, newGame[targetRow][targetCol])) {
-              return true;
-            }
-            break;
-          case 'r':
-            return isClearPath(startRow, startCol, targetRow, targetCol, newGame) && (rowDiff === 0 || colDiff === 0);
-          case 'n':
-            return Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1 || Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2;
-          case 'b':
-            return isClearPath(startRow, startCol, targetRow, targetCol, newGame) && Math.abs(rowDiff) === Math.abs(colDiff);
-          case 'q':
-            return isClearPath(startRow, startCol, targetRow, targetCol, newGame) && (rowDiff === 0 || colDiff === 0 || Math.abs(rowDiff) === Math.abs(colDiff));
-          case 'k':
-            return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
-          default:
-            return false;
-        }
-        return false;
-      }
-
-      function isClearPath(startRow, startCol, targetRow, targetCol, newGame) {
-        const rowDirection = targetRow - startRow > 0 ? 1 : -1;
-        const colDirection = targetCol - startCol > 0 ? 1 : -1;
-        let currentRow = startRow + rowDirection;
-        let currentCol = startCol + colDirection;
-        while (currentRow !== targetRow || currentCol !== targetCol) {
-          if (newGame[currentRow][currentCol] !== '') {
-            return false;
-          }
-          if (currentRow !== targetRow) currentRow += rowDirection;
-          if (currentCol !== targetCol) currentCol += colDirection;
-        }
-        return true;
-      }
-
-      function resetGame() {
-        setGame(initialGameState);
-        setIsWhiteTurn(true);
-        setGameOver(false);
-        setInCheck(false);
-        setCheckedKingPosition(null);
-      }
-
-      return (
-        <div>
-          <div className="turn-info">Current Turn: {isWhiteTurn ? 'White' : 'Black'} {gameOver && ' - Game Over!'}</div>
-          <div className="button-container">
-            <button onClick={resetGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
-          </div>
-          <div className="board-container">
-            <ChessBoard game={game} onClick={handleClick} selectedSquare={selectedSquare} />
-          </div>
-        </div>
-      );
     }
+    return false;
+  }
 
-    function ChessBoard({ game, onClick, selectedSquare }) {
-      return (
+  // Find the position of the king for the given color
+  function findKing(game, kingPiece) {
+    for (let row = 0; row < game.length; row++) {
+      for (let col = 0; col < game[row].length; col++) {
+        if (game[row][col] === kingPiece) {
+          return [row, col];
+        }
+      }
+    }
+    return null;
+  }
+
+  function isUpperCase(character) {
+    return character === character.toUpperCase();
+  }
+
+  return (
+    <div>
+      <div className="turn-info">
+        {gameOver ? "Game Over" : `${isWhiteTurn ? "White" : "Black"}'s Turn`}
+      </div>
+      <div className="button-container">
+        <button onClick={startRestartGame}>Start/Restart Game</button>
+        <button onClick={toggleTTS}>{isTTSEnabled ? 'Disable TTS' : 'Enable TTS'}</button>
+      </div>
+      <div className="board-container">
         <table>
           <tbody>
             {game.map((row, rowIndex) => (
               <tr key={rowIndex}>
                 {row.map((piece, colIndex) => (
-                  <td
-                    key={colIndex}
-                    onClick={() => onClick(rowIndex, colIndex)}
-                    style={{
-                      width: 60,
-                      height: 60,
-                      backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#EEE' : '#666',
+                  <td 
+                    key={colIndex} 
+                    onClick={() => handleClick(rowIndex, colIndex)} 
+                    style={{ 
+                      width: '60px', 
+                      height: '60px', 
+                      backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#eee' : '#777',
                       textAlign: 'center',
-                      border: selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex ? '2px solid red' : 'none',
+                      verticalAlign: 'middle',
                       cursor: 'pointer'
                     }}
                   >
-                    {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '100%', height: '100%' }} />}
+                    {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
                   </td>
                 ))}
               </tr>
             ))}
           </tbody>
         </table>
-      );
-    }
+      </div>
+    </div>
+  );
+}
 
-    ReactDOM.render(<Game />, document.getElementById('root'));
-  </script>
-</body>
-</html>
+ReactDOM.render(<Game />, document.getElementById('root'));
