--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -1,143 +1,350 @@
-      // Move the piece
-      newGame[toRow][toCol] = randomMove.piece;
-      newGame[fromRow][fromCol] = '';
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chess Game with Check Mechanic</title>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(45deg, #283048, #859398);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+    }
 
-      // Check for checkmate condition
-      const whiteKingPos = findKing(newGame, 'K');
-      if (isKingInCheck(newGame, whiteKingPos, true)) {
-        setGameOver(true);
-        alert('Game Over! Black wins by checkmating White.');
+    #root {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
+    }
+
+    .turn-info {
+      color: white;
+      font-size: 18px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+    
+    .button-container {
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    .board-container {
+      display: flex;
+      justify-content: center;
+    }
+  </style>
+</head>
+<body>
+  <div id="root"></div>
+
+  <script type="text/babel" data-presets="react,stage-3">
+    const initialGameState = [
+      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
+    ];
+
+    const pieceImages = {
+      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
+      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
+      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
+      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
+      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
+      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
+      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
+      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
+      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
+      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
+    };
+
+    function Game() {
+      const [game, setGame] = React.useState(initialGameState);
+      const [selectedSquare, setSelectedSquare] = React.useState(null);
+      const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
+      const [gameOver, setGameOver] = React.useState(false);
+      const [inCheck, setInCheck] = React.useState(false);
+      const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
+      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true); // State to manage TTS
+
+      // Function to toggle TTS on or off
+      function toggleTTS() {
+        setIsTTSEnabled(!isTTSEnabled);
       }
 
-      setGame(newGame);
-      setIsWhiteTurn(true); // Switch back to white's turn
-      announceTurn("White"); // Announce white's turn
-    }
-  }
+      // Function to announce the current player's turn using speech synthesis
+      function announceTurn(player) {
+        if (isTTSEnabled) {
+          const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
+          window.speechSynthesis.speak(utterance);
+        }
+      }
 
-  // Check if the piece belongs to the player
-  function isPlayerPiece(piece, isWhite) {
-    return (isWhite && piece === piece.toUpperCase()) || (!isWhite && piece === piece.toLowerCase());
-  }
+      // Function to announce when a king is in check
+      function announceCheck(player) {
+        if (isTTSEnabled) {
+          const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
+          window.speechSynthesis.speak(utterance);
+        }
+      }
 
-  // Check if the piece is an opponent's piece
-  function isOpponentPiece(selectedPiece, targetPiece) {
-    return (selectedPiece === selectedPiece.toUpperCase() && targetPiece === targetPiece.toLowerCase()) ||
-           (selectedPiece === selectedPiece.toLowerCase() && targetPiece === targetPiece.toUpperCase());
-  }
+      // Start or restart the game
+      function startRestartGame() {
+        setGame(initialGameState);
+        setSelectedSquare(null);
+        setIsWhiteTurn(true);
+        setGameOver(false);
+        setInCheck(false);
+        setCheckedKingPosition(null);
+        announceTurn("White"); // Announce white's turn at the beginning of the game
+      }
 
-  // Validate if the move is legal
-  function isValidMove(piece, fromRow, fromCol, toRow, toCol, newGame) {
-    // Add basic validation for different pieces (simplified for demonstration)
-    const targetPiece = newGame[toRow][toCol];
-    const direction = isUpperCase(piece) ? 1 : -1;
+      // Handle square click for moving pieces
+      function handleClick(row, col) {
+        if (gameOver || !isWhiteTurn) return; // Prevent user from clicking during CPU's turn
 
-    if (piece.toLowerCase() === 'p') { // Pawn
-      const moveForward = (fromRow + direction === toRow && fromCol === toCol);
-      const moveCapture = (fromRow + direction === toRow && Math.abs(fromCol - toCol) === 1 && targetPiece !== '');
-      return moveForward || moveCapture;
-    }
+        const currentPlayer = isWhiteTurn ? 'White' : 'Black';
 
-    // Add validation for other pieces (Rook, Knight, Bishop, Queen, King)
-    // For now, we'll just allow simple horizontal/vertical movement for rooks
-    if (piece.toLowerCase() === 'r') { // Rook
-      const sameRow = fromRow === toRow;
-      const sameCol = fromCol === toCol;
-      const pathClear = isPathClear(fromRow, fromCol, toRow, toCol, newGame);
-      return (sameRow || sameCol) && pathClear;
-    }
+        if (selectedSquare) {
+          const [selectedRow, selectedCol] = selectedSquare;
+          const selectedPiece = game[selectedRow][selectedCol];
+          const targetPiece = game[row][col];
 
-    // For simplicity, assume other pieces cannot move for now
-    return false;
-  }
+          if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
+            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
+              const newGame = game.map(row => row.slice());
 
-  // Check if a given path is clear for rook movement
-  function isPathClear(fromRow, fromCol, toRow, toCol, newGame) {
-    const rowStep = fromRow === toRow ? 0 : (toRow > fromRow ? 1 : -1);
-    const colStep = fromCol === toCol ? 0 : (toCol > fromCol ? 1 : -1);
+              if (targetPiece.toLowerCase() === 'k') {
+                setGameOver(true);
+                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
+              }
 
-    let currentRow = fromRow + rowStep;
-    let currentCol = fromCol + colStep;
+              if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
+                newGame[row][col] = selectedPiece;
+                newGame[selectedRow][selectedCol] = '';
+                setGame(newGame);
+                setSelectedSquare(null);
+                setIsWhiteTurn(false);
 
-    while (currentRow !== toRow || currentCol !== toCol) {
-      if (newGame[currentRow][currentCol] !== '') return false;
-      currentRow += rowStep;
-      currentCol += colStep;
-    }
-    return true;
-  }
+                // Announce the next player's turn after a move
+                const nextPlayer = "Black";
+                announceTurn(nextPlayer);
 
-  // Check if the king of the current player is in check
-  function isKingInCheck(game, kingPosition, isWhite) {
-    const kingPiece = isWhite ? 'K' : 'k';
+                // Check if the opponent's king is now in check
+                const opponentKingPos = findKing(newGame, 'k');
+                if (isKingInCheck(newGame, opponentKingPos, false)) {
+                  setInCheck(true);
+                  setCheckedKingPosition(opponentKingPos);
+                  announceCheck("Black"); // Announce check for the opponent's king
+                  alert(`${currentPlayer} has placed the opponent's King in check!`);
+                } else {
+                  setInCheck(false);
+                  setCheckedKingPosition(null);
+                }
 
-    // Check all opponent's pieces for attacking moves
-    for (let row = 0; row < game.length; row++) {
-      for (let col = 0; col < game[row].length; col++) {
-        const piece = game[row][col];
-        if (piece && isOpponentPiece(piece, kingPiece)) {
-          if (isValidMove(piece, row, col, kingPosition[0], kingPosition[1], game)) {
-            return true;
+                setTimeout(cpuMove, 500); // CPU moves after a short delay
+              } else {
+                setSelectedSquare(null);
+              }
+            } else {
+              setSelectedSquare(null);
+            }
+          } else {
+            setSelectedSquare(null);
+          }
+        } else {
+          if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
+            setSelectedSquare([row, col]);
           }
         }
       }
-    }
-    return false;
-  }
 
-  // Find the position of the king for the given color
-  function findKing(game, kingPiece) {
-    for (let row = 0; row < game.length; row++) {
-      for (let col = 0; col < game[row].length; col++) {
-        if (game[row][col] === kingPiece) {
-          return [row, col];
+      // Function to handle CPU's move (simple random move generator)
+      function cpuMove() {
+        const newGame = game.map(row => row.slice());
+        const cpuMoves = [];
+
+        // Collect all valid moves for the CPU (black pieces)
+        for (let row = 0; row < newGame.length; row++) {
+          for (let col = 0; col < newGame[row].length; col++) {
+            const piece = newGame[row][col];
+            if (piece && isPlayerPiece(piece, false)) {
+              for (let targetRow = 0; targetRow < newGame.length; targetRow++) {
+                for (let targetCol = 0; targetCol < newGame[targetRow].length; targetCol++) {
+                  if (isValidMove(piece, row, col, targetRow, targetCol, newGame)) {
+                    cpuMoves.push({ piece, from: [row, col], to: [targetRow, targetCol] });
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        if (cpuMoves.length > 0) {
+          const randomMove = cpuMoves[Math.floor(Math.random() * cpuMoves.length)];
+          const [fromRow, fromCol] = randomMove.from;
+          const [toRow, toCol] = randomMove.to;
+
+          // Move the piece
+          newGame[toRow][toCol] = randomMove.piece;
+          newGame[fromRow][fromCol] = '';
+
+          // Check for checkmate condition
+          const whiteKingPos = findKing(newGame, 'K');
+          if (isKingInCheck(newGame, whiteKingPos, true)) {
+            setGameOver(true);
+            alert('Game Over! Black wins by checkmating White.');
+          }
+
+          setGame(newGame);
+          setIsWhiteTurn(true); // Switch back to white's turn
+          announceTurn("White"); // Announce white's turn
         }
       }
-    }
-    return null;
-  }
 
-  function isUpperCase(character) {
-    return character === character.toUpperCase();
-  }
+      // Check if the piece belongs to the player
+      function isPlayerPiece(piece, isWhite) {
+        return (isWhite && piece === piece.toUpperCase()) || (!isWhite && piece === piece.toLowerCase());
+      }
 
-  return (
-    <div>
-      <div className="turn-info">
-        {gameOver ? "Game Over" : `${isWhiteTurn ? "White" : "Black"}'s Turn`}
-      </div>
-      <div className="button-container">
-        <button onClick={startRestartGame}>Start/Restart Game</button>
-        <button onClick={toggleTTS}>{isTTSEnabled ? 'Disable TTS' : 'Enable TTS'}</button>
-      </div>
-      <div className="board-container">
-        <table>
-          <tbody>
-            {game.map((row, rowIndex) => (
-              <tr key={rowIndex}>
-                {row.map((piece, colIndex) => (
-                  <td 
-                    key={colIndex} 
-                    onClick={() => handleClick(rowIndex, colIndex)} 
-                    style={{ 
-                      width: '60px', 
-                      height: '60px', 
-                      backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#eee' : '#777',
-                      textAlign: 'center',
-                      verticalAlign: 'middle',
-                      cursor: 'pointer'
-                    }}
-                  >
-                    {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
-                  </td>
+      // Check if the piece is an opponent's piece
+      function isOpponentPiece(selectedPiece, targetPiece) {
+        return (selectedPiece === selectedPiece.toUpperCase() && targetPiece === targetPiece.toLowerCase()) ||
+               (selectedPiece === selectedPiece.toLowerCase() && targetPiece === targetPiece.toUpperCase());
+      }
+
+      // Validate if the move is legal
+      function isValidMove(piece, fromRow, fromCol, toRow, toCol, newGame) {
+        // Add basic validation for different pieces (simplified for demonstration)
+        const targetPiece = newGame[toRow][toCol];
+        const direction = isUpperCase(piece) ? 1 : -1;
+
+        if (piece.toLowerCase() === 'p') { // Pawn
+          const moveForward = (fromRow + direction === toRow && fromCol === toCol);
+          const moveCapture = (fromRow + direction === toRow && Math.abs(fromCol - toCol) === 1 && targetPiece !== '');
+          return moveForward || moveCapture;
+        }
+
+        // Add validation for other pieces (Rook, Knight, Bishop, Queen, King)
+        // For now, we'll just allow simple horizontal/vertical movement for rooks
+        if (piece.toLowerCase() === 'r') { // Rook
+          const sameRow = fromRow === toRow;
+          const sameCol = fromCol === toCol;
+          const pathClear = isPathClear(fromRow, fromCol, toRow, toCol, newGame);
+          return (sameRow || sameCol) && pathClear;
+        }
+
+        // For simplicity, assume other pieces cannot move for now
+        return false;
+      }
+
+      // Check if a given path is clear for rook movement
+      function isPathClear(fromRow, fromCol, toRow, toCol, newGame) {
+        const rowStep = fromRow === toRow ? 0 : (toRow > fromRow ? 1 : -1);
+        const colStep = fromCol === toCol ? 0 : (toCol > fromCol ? 1 : -1);
+
+        let currentRow = fromRow + rowStep;
+        let currentCol = fromCol + colStep;
+
+        while (currentRow !== toRow || currentCol !== toCol) {
+          if (newGame[currentRow][currentCol] !== '') return false;
+          currentRow += rowStep;
+          currentCol += colStep;
+        }
+        return true;
+      }
+
+      // Check if the king of the current player is in check
+      function isKingInCheck(game, kingPosition, isWhite) {
+        const kingPiece = isWhite ? 'K' : 'k';
+
+        // Check all opponent's pieces for attacking moves
+        for (let row = 0; row < game.length; row++) {
+          for (let col = 0; col < game[row].length; col++) {
+            const piece = game[row][col];
+            if (piece && isOpponentPiece(piece, kingPiece)) {
+              if (isValidMove(piece, row, col, kingPosition[0], kingPosition[1], game)) {
+                return true;
+              }
+            }
+          }
+        }
+        return false;
+      }
+
+      // Find the position of the king for the given color
+      function findKing(game, kingPiece) {
+        for (let row = 0; row < game.length; row++) {
+          for (let col = 0; col < game[row].length; col++) {
+            if (game[row][col] === kingPiece) {
+              return [row, col];
+            }
+          }
+        }
+        return null;
+      }
+
+      function isUpperCase(character) {
+        return character === character.toUpperCase();
+      }
+
+      return (
+        <div>
+          <div className="turn-info">
+            {gameOver ? "Game Over" : `${isWhiteTurn ? "White" : "Black"}'s Turn`}
+          </div>
+          <div className="button-container">
+            <button onClick={startRestartGame}>Start/Restart Game</button>
+            <button onClick={toggleTTS}>{isTTSEnabled ? 'Disable TTS' : 'Enable TTS'}</button>
+          </div>
+          <div className="board-container">
+            <table>
+              <tbody>
+                {game.map((row, rowIndex) => (
+                  <tr key={rowIndex}>
+                    {row.map((piece, colIndex) => (
+                      <td 
+                        key={colIndex} 
+                        onClick={() => handleClick(rowIndex, colIndex)} 
+                        style={{ 
+                          width: '60px', 
+                          height: '60px', 
+                          backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#eee' : '#777',
+                          textAlign: 'center',
+                          verticalAlign: 'middle',
+                          cursor: 'pointer'
+                        }}
+                      >
+                        {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
+                      </td>
+                    ))}
+                  </tr>
                 ))}
-              </tr>
-            ))}
-          </tbody>
-        </table>
-      </div>
-    </div>
-  );
-}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      );
+    }
 
-ReactDOM.render(<Game />, document.getElementById('root'));
+    ReactDOM.render(<Game />, document.getElementById('root'));
+  </script>
+</body>
+</html>
